force-app/main/default/objects/custom_create106__c/custom_create106__c.object-meta.xml
<CustomObject>
    <label>Custom created object106</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects106</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>