force-app/main/default/objects/custom_create106__c/fields/custom_create_106field583__c.field-meta.xml
<CustomField>
    <fullName>custom_create_106field583__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 106field583</label>
    <type>Checkbox</type>
</CustomField>